Kelsey Development Sandbox/src/objects/DS_SDQ_PSI_CDI_B__c.object
<CustomObject>
    <fields>
        <fullName>BSDPTANT__c</fullName>
        <description>Parent 4-10: Often loses temper</description>
        <label>BSDPTANT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPTIME__c</fullName>
        <description>Parent 4-10: How long have these difficulties been present?</description>
        <label>BSDPTIME</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPTOT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Stress Scoring,Parent4-10</description>
        <label>BSDPTOT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPTYP__c</fullName>
        <description>Significance total parent</description>
        <label>BSDPTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPUNHA__c</fullName>
        <description>Parent 4-10: Often unhappy, depressed or tearful</description>
        <label>BSDPUNHA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPUPSET__c</fullName>
        <description>Parent 4-10: Do the difficulties upset or distress your child?</description>
        <label>BSDPUPSET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPWORR__c</fullName>
        <description>Parent 4-10: Many worries or often seems worried</description>
        <label>BSDPWORR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSAFRA__c</fullName>
        <description>Self 11-17: I have many fears, I am easily scared</description>
        <label>BSDSAFRA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSATTE__c</fullName>
        <description>Self 11-17: I finish the work I&apos;m doing. My attention is good</description>
        <label>BSDSATTE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSBEH__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Behavioral Difficulties Scoring, Self</description>
        <label>BSDSBEH</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDSBTYP__c</fullName>
        <description>Significance behavior self</description>
        <label>BSDSBTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSBULL__c</fullName>
        <description>Self 11-17: Other children or young people pick on me or bully me</description>
        <label>BSDSBULL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSCARI__c</fullName>
        <description>Self 11-17: I am helpful if someone is hurt, upset or feeling ill</description>
        <label>BSDSCARI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSCLIN__c</fullName>
        <description>Self 11-17: I am nervous in new situations. I easily lose confidence</description>
        <label>BSDSCLIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSCOMM__c</fullName>
        <description>Self 11-17: Do you have any other comments or concerns?</description>
        <label>BSDSCOMM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSDSCONS__c</fullName>
        <description>Self 11-17: I try to be nice to other people. I care about their feelings</description>
        <label>BSDSCONS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSDCL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Impact of any Difficulties on the Child&apos;s Life Scoring, Self</description>
        <label>BSDSDCL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDSDIST__c</fullName>
        <description>Self 11-17: I am easily distracted, I find it difficult to concentrate</description>
        <label>BSDSDIST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSEBCD__c</fullName>
        <description>Self 11-17: Overall, do you think that you have difficulties in any of the following areas: emotions, concentration, behavior or being able to get on with other people?</description>
        <label>BSDSEBCD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSEMO__c</fullName>
        <description>Emotional Distress Scoring, Self</description>
        <label>BSDSEMO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDSETYP__c</fullName>
        <description>Significance Emotional self</description>
        <label>BSDSETYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSFAM__c</fullName>
        <description>Self 11-17: Do the difficulties make it harder for those around you (family, friends, teachers, etc.)?</description>
        <label>BSDSFAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSFIDG__c</fullName>
        <description>Self 11-17: I am constantly fidgeting or squirming</description>
        <label>BSDSFIDG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSFIGH__c</fullName>
        <description>Self 11-17: I fight a lot. I can make other people do what I want</description>
        <label>BSDSFIGH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSFRIE__c</fullName>
        <description>Self 11-17: I have one good friend or more</description>
        <label>BSDSFRIE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSHELP__c</fullName>
        <description>Self 11-17: I often offer to help others (parents, teachers, children)</description>
        <label>BSDSHELP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSHTYP__c</fullName>
        <description>Significance hyperactive self</description>
        <label>BSDSHTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSHYP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hyperactivity and Attentional Difficulties Scoring, Self</description>
        <label>BSDSHYP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDSIMPC__c</fullName>
        <description>Self 11-17: Do the difficulties interfere with your everyday life in the following areas? CLASSROOM LEARNING</description>
        <label>BSDSIMPC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSIMPF__c</fullName>
        <description>Self 11-17: Do the difficulties interfere with your everyday life in the following areas? FRIENDSHIPS</description>
        <label>BSDSIMPF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSIMPH__c</fullName>
        <description>Self 11-17: Do the difficulties interfere with your everyday life in the following areas? HOME LIFE</description>
        <label>BSDSIMPH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSIMPL__c</fullName>
        <description>Self 11-17: Do the difficulties interfere with your everyday life in the following areas? LEISURE ACTIVITIES</description>
        <label>BSDSIMPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSITYP__c</fullName>
        <description>Significance Impact Self</description>
        <label>BSDSITYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSKHB__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Kind and Helpful Behavior Scoring, Self</description>
        <label>BSDSKHB</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDSKIND__c</fullName>
        <description>Self 11-17: I am kind to younger children</description>
        <label>BSDSKIND</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSKTYP__c</fullName>
        <description>Significance kind self</description>
        <label>BSDSKTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSLIES__c</fullName>
        <description>Self 11-17: I am often accused of lying or cheating</description>
        <label>BSDSLIES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSLONE__c</fullName>
        <description>Self 11-17: I would rather be alone than with people of my age</description>
        <label>BSDSLONE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSOBEY__c</fullName>
        <description>Self 11-17: I usually do as I am told</description>
        <label>BSDSOBEY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSOLDB__c</fullName>
        <description>Self 11-17: I get along better with adults than with people my own age</description>
        <label>BSDSOLDB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSOTC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Difficulties with Other Children Scoring, Self</description>
        <label>BSDSOTC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDSOTYP__c</fullName>
        <description>Significance other children self</description>
        <label>BSDSOTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSPOPU__c</fullName>
        <description>Self 11-17: Other people my age generally like me</description>
        <label>BSDSPOPU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSREFL__c</fullName>
        <description>Self 11-17: I think before I do things</description>
        <label>BSDSREFL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSREST__c</fullName>
        <description>Self 11-17: I am restless, I cannot stay still for long</description>
        <label>BSDSREST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSSHAR__c</fullName>
        <description>Self 11-17: I usually share with others, for example CD’s, games, food</description>
        <label>BSDSSHAR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSSOMA__c</fullName>
        <description>Self 11-17: I get a lot of headaches, stomach-aches or sickness</description>
        <label>BSDSSOMA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSSTEA__c</fullName>
        <description>Self 11-17: I take things that are not mine from home, school or elsewhere</description>
        <label>BSDSSTEA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSTANT__c</fullName>
        <description>Self 11-17: I get very angry and often lose my temper</description>
        <label>BSDSTANT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSTIME__c</fullName>
        <description>Self 11-17: How long have these difficulties been present?</description>
        <label>BSDSTIME</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSTOT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Stress Scoring, Self</description>
        <label>BSDSTOT</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDSTYP__c</fullName>
        <description>Significance Total Self</description>
        <label>BSDSTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSUNHA__c</fullName>
        <description>Self 11-17: I am often unhappy, depressed or tearful</description>
        <label>BSDSUNHA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSUPSET__c</fullName>
        <description>Self 11-17: Do the difficulties upset or distress you?</description>
        <label>BSDSUPSET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDSWORR__c</fullName>
        <description>Self 11-17: I worry a lot</description>
        <label>BSDSWORR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_B__c</referenceTo>
        <relationshipLabel>DS SDQ PSI CDI B</relationshipLabel>
        <relationshipName>DS_SDQ_PSI_CDI_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS SDQ PSI CDI B</relationshipLabel>
        <relationshipName>DS_SDQ_PSI_CDI_B</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>SECTION</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_PSI__c</fullName>
        <label>STATUS PSI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_SDQ_P_04_10__c</fullName>
        <label>STATUS SDQ P 04 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_SDQ_P_11_17__c</fullName>
        <label>STATUS SDQ P 11 17</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_SDQ_S_11_17__c</fullName>
        <label>STATUS SDQ S 11 17</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS SDQ PSI CDI B</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>BDOV__c</columns>
        <columns>BFORM__c</columns>
        <columns>BDOAPSI__c</columns>
        <columns>BDOASDOP__c</columns>
        <columns>BDOASDOS__c</columns>
        <columns>BDOASDYP__c</columns>
        <columns>STATUS_PSI__c</columns>
        <columns>STATUS_SDQ_P_04_10__c</columns>
        <columns>STATUS_SDQ_P_11_17__c</columns>
        <columns>STATUS_SDQ_S_11_17__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>